--- a/web/permisostrabajo/permisos.xhtml
+++ b/web/permisostrabajo/permisos.xhtml
@@ -33,9 +33,8 @@
                         <h:outputText value="#{permiso.estadoPermiso.descripcion}"/>
                     </p:column>
                     <p:column headerText="Borrar">
-                        <p:commandButton icon="ui-icon-trash" onclick="#{creaPermisoController.borrarPermiso(permiso)}"/>
+                        <p:commandButton icon="ui-icon-trash" actionListener="#{creaPermisoController.borrarPermiso(permiso)}" update="@form"/>
                     </p:column>
-                    
                 </p:dataTable>
             </p:panel>
         </h:form>
