--- a/web/plantilla1.xhtml
+++ b/web/plantilla1.xhtml
@@ -9,20 +9,10 @@
     <h:head id="head1">
         <title id="title">Sistema Gestion V1</title>
         <link id="link1" rel="stylesheet" type="text/css" href="/wpsoft/styles/principal.css"/>
-        <script type="text/javascript">
-            //Funcion para componentes de arrastrar y soltar
-            function handleDrop(event, ui) {
-                var data = ui.draggable;
-                data.fadeOut('fast');
-            }
-        </script>
         <f:view id="view1" locale="#{generalController.locale}" />
 
      </h:head>
-     <h:body id="body1" onload="precargar();">
-         <h:form>
-             <p:remoteCommand name="precargar" action="#{applicationController.preCargar}"/>
-         </h:form>
+     <h:body id="body1">
         <div class="column_detail one" id="main-content" role="main">
             <div class="portlet-layout">
             
