--- a/web/contratistas/empleados.xhtml
+++ b/web/contratistas/empleados.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             
             <p:commandButton icon="ui-icon-document" action="#{empleadoController.crearNuevo}" value="Crear" ajax="false"/>
             <p:panel header="Empleados">
