--- a/web/permisostrabajo/creacion_busquedad.xhtml
+++ b/web/permisostrabajo/creacion_busquedad.xhtml
@@ -12,7 +12,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             <p:panel header="Diligencia datos de búsqueda">
                 <p:panelGrid columns="3">
                     <h:outputLabel for="estado" value="ESTADO:" />
