--- a/web/permisostrabajo/creacion_datos.xhtml
+++ b/web/permisostrabajo/creacion_datos.xhtml
@@ -12,7 +12,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             <p:panel header="Diligencie los datos del Permiso de Trabajo">
                 <p:panelGrid columns="3">
                     <h:outputLabel for="area" value="#{labels.area_sitio}" />
