--- a/web/permisostrabajo/gestion_consideraciones.xhtml
+++ b/web/permisostrabajo/gestion_consideraciones.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             
             <p:panel id="datos_generales" header="Datos Generales del Permiso">
                 <p:panelGrid  style="margin-top:15px">
