--- a/web/plantilla1.xhtml
+++ b/web/plantilla1.xhtml
@@ -7,10 +7,13 @@
      xmlns:p="http://primefaces.org/ui">
 
     <h:head id="head1">
-        <title id="title">Sistema Gestion V1</title>
+        <f:facet name="first">
+        <meta http-equiv="X-UA-Compatible" content="IE=8, IE=9, IE=10"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <title id="title">Work Permits System</title>
         <link id="link1" rel="stylesheet" type="text/css" href="/wpsoft/styles/principal.css"/>
         <f:view id="view1" locale="#{generalController.locale}" />
-
+        </f:facet>
      </h:head>
      <h:body id="body1">
         <div class="column_detail one" id="main-content" role="main">
