--- a/web/plantilla3.xhtml
+++ b/web/plantilla3.xhtml
@@ -6,9 +6,13 @@
      xmlns:p="http://primefaces.org/ui">
 
     <h:head id="head1">
-        <title id="title">Work Permiss System</title>
+        <f:facet name="first">
+        <meta http-equiv="X-UA-Compatible" content="IE=8, IE=9, IE=10"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <title id="title">Work Permits System</title>
         <link href="/wpsoft/styles/principal3.css" rel="stylesheet" type="text/css" />
         <f:view id="view1" locale="#{generalController.locale}" />
+        </f:facet>
      </h:head>
      <h:body id="body1">
          
