--- a/web/usuarios/grupos.xhtml
+++ b/web/usuarios/grupos.xhtml
@@ -11,7 +11,7 @@
     <ui:define name="contenido">
         <h:form id="form" >
             <h:inputHidden id="id" value="#{gruposController.grupo.id}"/>
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             <p:panel id="formGrupo" header="Datos del Grupos">
                 
                 <p:panelGrid columns="3" id="grid">
