--- a/web/usuarios/menus.xhtml
+++ b/web/usuarios/menus.xhtml
@@ -10,7 +10,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             <h:inputHidden id="id" value="#{menusController.menu.id}"/>
 
             <p:panel header="Datos del Menú">
