--- a/web/usuarios/usuarios.xhtml
+++ b/web/usuarios/usuarios.xhtml
@@ -10,7 +10,7 @@
     </ui:define>
     <ui:define name="contenido">
       <h:form id="form">
-        <p:growl id="msgs" />
+        <p:messages  id="msgs" />
         <h:inputHidden id="id" value="#{usuariosController.usuario.id}"/>
 
         <p:panel id="form_grupo" header="Datos del Usuario">
