--- a/web/herramientas/certificados.xhtml
+++ b/web/herramientas/certificados.xhtml
@@ -13,7 +13,7 @@
         <h:form id="form" enctype="multipart/form-data">
             <p:panel header="Datos del certificado" id="pform">
 
-                <p:growl id="msg"/>
+                <p:messages id="msg"/>
                 <p:panelGrid columns="3">
                     <h:outputLabel for="nombre" value="Nombre del Certificado:"/>
                     <p:inputText id="nombre" value="#{certificadoController.certificado.nombre}"/>
