--- a/web/herramientas/peligro.xhtml
+++ b/web/herramientas/peligro.xhtml
@@ -12,7 +12,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages id="msgs" />
             <h:inputHidden id="id" value="#{riesgoController.item.id}"/>
 
             <p:panel header="Datos del Peligro">
