--- a/web/herramientas/sector.xhtml
+++ b/web/herramientas/sector.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages id="msgs" />
             <h:inputHidden id="id" value="#{sectorController.item.id}"/>
 
             <p:panel header="Datos del Sector">
@@ -49,7 +49,7 @@
                                             <h:outputText value="#{equipo.nombre}"/>
                                         </p:column>
                                         <p:column headerText="Borrar">
-                                            <p:commandButton update=":form"  process="@this" actionListener="#{sectorController.removeEquipo(equipo)}" icon="ui-icon-trash"/>
+                                            <p:commandButton update="@form"  process="@this" actionListener="#{sectorController.removeEquipo(equipo)}" icon="ui-icon-trash"/>
                                         </p:column>
                                     </p:dataTable>
                             </p:outputPanel>
