--- a/web/permisostrabajo/creacion_sel_tipo.xhtml
+++ b/web/permisostrabajo/creacion_sel_tipo.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             <p:panel header="Seleccione el tipo de Permiso de Trabajo">
                 <p:panelGrid columns="3"> 
                     <h:outputLabel for="tipo_permiso" value="" />
