--- a/web/permisostrabajo/gestion_aprob_extras.xhtml
+++ b/web/permisostrabajo/gestion_aprob_extras.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             <p:panel header="Certificados">
                 <p:outputPanel id="certificados">
                     <p:dataTable value="#{gestionPermisoController.permiso.certificados}" var="item" editable="true">
