--- a/web/permisostrabajo/gestion_datos.xhtml
+++ b/web/permisostrabajo/gestion_datos.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             
             <p:panel header="Disciplina" rendered="#{gestionPermisoController.permiso.etapa eq applicationController.DILIGENCIAR}">
                 <p:panelGrid columns="3">
