--- a/web/permisostrabajo/gestion_ejecutar.xhtml
+++ b/web/permisostrabajo/gestion_ejecutar.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             
             <p:commandButton value="Imprimir" type="button" icon="ui-icon-print">  
                 <p:printer target="datos_permiso" />  
