--- a/web/permisostrabajo/gestion_observaciones.xhtml
+++ b/web/permisostrabajo/gestion_observaciones.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             <p:panel header="Observaciones">
                 <p:panelGrid  columns="2">    
                     <p:inputTextarea id="nota" value="#{gestionPermisoController.permiso.notaGestion}"  cols="50">
