--- a/web/permisostrabajo/proyecto_permisos.xhtml
+++ b/web/permisostrabajo/proyecto_permisos.xhtml
@@ -10,7 +10,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             <p:panel header="Datos del Proyecto">
                 <p:panelGrid  style="margin-top:15px">
                     <f:facet name="header">  
