--- a/web/plantilla2.xhtml
+++ b/web/plantilla2.xhtml
@@ -6,7 +6,10 @@
      xmlns:p="http://primefaces.org/ui">
 
     <h:head id="head1">
-        <title id="title">Work Permiss System</title>
+        <f:facet name="first">
+        <meta http-equiv="X-UA-Compatible" content="IE=8, IE=9, IE=10"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <title id="title">Work Permits System</title>
         <link href="/wpsoft/styles/principal2.css" rel="stylesheet" type="text/css" />
         <!--<script type="text/javascript">
             //Funcion para componentes de arrastrar y soltar
@@ -16,6 +19,7 @@
             }
         </script>-->
         <f:view id="view1" locale="{generalController.locale}" />
+        </f:facet>
      </h:head>
      <h:body id="body1">
 
