--- a/web/usuarios/roles.xhtml
+++ b/web/usuarios/roles.xhtml
@@ -10,7 +10,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:form id="form" >
-            <p:growl id="msgs" />
+            <p:messages  id="msgs" />
             <h:inputHidden id="id" value="#{rolesController.rol.id}"/>
             <p:panel header="Datos del Rol">
                 <p:panelGrid id="form_rol" columns="3">
