--- a/web/permisostrabajo/creacion_datos.xhtml
+++ b/web/permisostrabajo/creacion_datos.xhtml
@@ -109,6 +109,7 @@
                                            disabled="#{creaPermisoController.permiso.id ne null}"/>
                         </p:column>
                     </p:dataTable>
+                    <p:outputLabel value="."/>
                     
                     <f:facet name="footer">
                         <p:commandButton value="Guardar" icon="ui-icon-disk" action="#{creaPermisoController.guardarPermiso}" ajax="false"/>
