--- a/web/permisostrabajo/permisos.xhtml
+++ b/web/permisostrabajo/permisos.xhtml
@@ -37,6 +37,7 @@
                     </p:column>
                 </p:dataTable>
             </p:panel>
+            <p:messages id="msgs1" />
         </h:form>
    </ui:define>
   </ui:composition>
