--- a/web/permisostrabajo/proyectos.xhtml
+++ b/web/permisostrabajo/proyectos.xhtml
@@ -39,6 +39,7 @@
                     </p:column>
                 </p:dataTable> 
             </p:panel>
+            <p:messages id="msgs1" />
         </h:form>
    </ui:define>
   </ui:composition>
