--- a/web/usuarios/usuarios.xhtml
+++ b/web/usuarios/usuarios.xhtml
@@ -12,7 +12,7 @@
       <h:form id="form">
         <p:messages  id="msgs" />
         <h:inputHidden id="id" value="#{usuariosController.usuario.id}"/>
-
+        <p:commandButton actionListener="#{usuariosController.nuevo}" update="@form" value="Crear Nuevo" icon="ui-icon-document" rendered="#{usuariosController.usuario.id ne null}"/>
         <p:panel id="form_grupo" header="Datos del Usuario">
         <p:panelGrid columns="3" id="grid">
             <h:outputLabel for="usr" value="Usuario: " />
@@ -43,7 +43,6 @@
         <br/>
         
         <p:outputPanel id="usuarios">
-            <p:commandButton update="@form" actionListener="#{usuariosController.nuevo}" value="Crear" icon="ui-icon-document"/>
             <p:dataTable value="#{usuariosController.usuarios}" var="usuario"
                              paginator="true"
                              rows="10"
